<resources>
    <string name="app_name">My Application</string>
    <string name="text_name">Name</string>
    <string name="text_age">Age</string>
    <string name="text_gender">Gender</string>

    <string name="login_form_text">Login Form</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_name">Name should contain only alphabets</string>
    <string name="error_invalid_age">Age should contain only digits not starting from zero</string>
    <string name="error_field_required">This field is required</string>

    <string name="error_invalid_username">Username must be 5 characters long and should not have whitespaces</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password should be atleast 6 characters long having Uppercase,Lowercase and Digit</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <string name="hint_age">21</string>
    <string name="hint_name">Alibaba</string>

    <string name="finish_text">Finish</string>
    <string name="add_more_text">Add More</string>
    <string name="log_out">Log Out</string>


    <string name="gender_male">M</string>
    <string name="gender_female">F</string>

</resources>
