<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.root.myapplication.MainFragment">


    <TextView
        android:id="@+id/name_view"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textScaleX="2.0"
        android:textColor="@color/brown"
        android:text="@string/text_name"
        android:layout_alignBaseline="@+id/input_name"
        android:layout_alignBottom="@+id/input_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="168dp"
        android:layout_marginStart="168dp"
        android:textColorHint="@drawable/selector"/>

    <TextView
        android:id="@+id/age_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_view"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_alignLeft="@id/name_view"
        android:layout_alignStart="@id/name_view"
        android:textStyle="bold"
        android:textScaleX="2.0"
        android:textColor="@color/brown"
        android:text="@string/text_age" />

    <EditText
        android:id="@+id/input_age"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_name"
        android:layout_alignBaseline="@id/age_view"
        android:layout_alignLeft="@id/input_name"
        android:layout_alignStart="@id/input_name"
        android:hint="@string/hint_age"
        android:textColorHint="@drawable/selector"/>

    <TextView
        android:id="@+id/gender_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/age_view"
        android:textStyle="bold"
        android:textScaleX="2.0"
        android:textColor="@color/brown"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_alignLeft="@id/name_view"
        android:layout_alignStart="@id/name_view"
        android:text="@string/text_gender"/>

    <RadioGroup
        android:id="@+id/gender_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignTop="@id/gender_view"
        android:layout_below="@id/input_age"
        android:layout_alignLeft="@id/input_name"
        android:layout_alignStart="@id/input_name">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female"
            android:checked="true"
            android:textColor="@color/brown"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/male"
            android:text="@string/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/brown"
            android:textStyle="bold"/>
    </RadioGroup>

    <Button
        android:id="@+id/add_more_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_more_text"
        android:layout_below="@id/gender_button"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_text"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimary"/>

</RelativeLayout>
