<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.root.myapplication.LoginFragment">

    <TextView
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wide_margin"
        android:layout_marginLeft="@dimen/wide_margin"
        android:layout_marginRight="@dimen/wide_margin"
        android:layout_marginEnd="@dimen/wide_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/login_form_text"
        android:textColor="@color/brown"
        android:textAllCaps="true"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_below="@id/login_form"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        android:layout_marginStart="@dimen/wide_margin"
        android:layout_marginLeft="@dimen/wide_margin"
        android:layout_marginRight="@dimen/wide_margin"
        android:layout_marginEnd="@dimen/wide_margin"
        android:layout_marginTop="@dimen/vertical_margin" />

            <EditText
                android:id="@+id/email"
                android:layout_below="@id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_marginStart="@dimen/wide_margin"
                android:layout_marginLeft="@dimen/wide_margin"
                android:layout_marginRight="@dimen/wide_margin"
                android:layout_marginEnd="@dimen/wide_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:maxLines="1" />

            <EditText
                android:id="@+id/password"
                android:layout_below="@id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:layout_marginStart="@dimen/wide_margin"
                android:layout_marginLeft="@dimen/wide_margin"
                android:layout_marginRight="@dimen/wide_margin"
                android:layout_marginEnd="@dimen/wide_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:maxLines="1" />


        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/wide_margin"
            android:text="Done"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="20sp"
            android:background="@color/colorPrimary"/>

</RelativeLayout>
